Package nl.tudelft.simulation.dsol.web.peer in dsol-web removed, as this is an internal set of classes that should not be re-implemented. As of Java-9 they are completely internal-only. The test in dsol-event have been upgraded to the latest JUnit test format. djunits and djutils have been updated to the latest Java9+ compatible version. Included jakarta.annotation-api to be compatible with Java 11+. tt-tag in javadoc replaced by code-tag to be compatible with HTML-5 and Java-11+. javadoc source version 8 added to pom-file to be compatible with Java-11+